# safegear

./: Cargo.toml  Makefile.toml  Shuttle.toml  build.rs
.github/workflows/: rust-vuejs.yml
migrations/2024-06-07-161708_create_items_table/: up.sql
migrations/2024-06-25-182909_create_tags_table/: down.sql  up.sql
migrations/2024-06-29-080527_create_events_table/: up.sql
migrations/2024-07-22-193000_alter_items_add_serial_number/: down.sql  up.sql
migrations/2024-07-26-071732_create_users_table/: up.sql
migrations/2024-07-29-143952_alter_users_make_login_unique/: down.sql  up.sql
migrations/2024-07-31-094806_alter_tags_remove_color/: down.sql  up.sql
migrations/2024-10-08-223109_remove_parent_id_from_events/: down.sql  up.sql
src/: db.rs  main.rs  provisioning.rs  schema.rs
src/api/: item_create.rs  item_details.rs  item_inspect.rs  item_list.rs  mod.rs  static.rs  tag_create.rs  tag_delete.rs  tag_list.rs  user_create.rs  user_delete.rs  user_list.rs  user_login.rs
src/models/: event.rs  item.rs  mod.rs  tag.rs  user.rs
webui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  main.ts  stores.ts
webui/src/assets/: main.css
webui/src/bindings/: CreateItem.ts  CreateTag.ts  Item.ts  ItemDetails.ts  ItemEvent.ts  Tag.ts
webui/src/components/: EventTimelineItem.vue  ItemTable.vue  NavBar.vue  NightMode.vue
webui/src/router/: index.ts
webui/src/views/: HomeView.vue  ItemCreate.vue  ItemDetails.vue  ItemList.vue  LoginView.vue  TagList.vue  UserCreate.vue  UserList.vue
